add basic email scraping functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,5 +19,9 @@
     <a href="/no-flash">No Flash</a>
     </p>
 
+    <% emails.forEach(function(element) { %>
+        <li><%= element %></li>
+    <% }); %>
+
 	</body>
 </html>
