--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<title>Express 3.x Example for connect-flash</title>
 	</head>
+    <link rel="stylesheet" href="/styles.css">
 	<body>
 
     <div class="container m-4">
@@ -24,7 +25,7 @@
 
     <div class="container m-4">
         <ul class="list-group">
-            <li class="list-group-item active">Email Addresses Recovered</li>
+            <li class="list-group-item active"> Email Addresses Recovered</li>
             <% emails.forEach(function(element) { %>
                 <li class="list-group-item"><%= element %></li>
             <% }); %>
