--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,65 +1,88 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Express 3.x Example for connect-flash</title>
+		<title>Universal Scraper</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
     <link rel="stylesheet" href="/styles.css">
 	<body>
 
-    <div class="container m-4">
-        <div class="jumbotron">
-            <h1 class="display-4">Universal Email Scraper</h1>
-            <p class="lead">Perform a simple web scrape to extract contact information from company websites</p>
-            <hr class="my-4">
+    <div class="container">
+        <div class="container m-4">
+            <div class="jumbotron">
+                <h1 class="display-4 text-shadow">Universal Email Scraper</h1>
+                <p class="lead text-shadow">Perform a simple web scrape to extract contact information from company websites</p>
+                <hr class="my-4">
 
-            <p class="lead">
-            <form action="/scrape" method="GET">
-            <div class="form-group">
-                <input type="text" class="form-control" id="link" name="link" placeholder="Website URL" value="http://alban-financial.co.uk/">
+                <p class="lead">
+                <form action="/scrape" method="GET">
+                <div class="form-group">
+                    <input type="text" class="form-control" id="link" name="link" placeholder="Website URL" value="http://alban-financial.co.uk/">
+                </div>
+                <div class="form-group pull-right">
+                    <button type="submit" class="btn btn-info" id="btn-scrape">Scrape</button>
+                </div>
+                </form>
             </div>
-            <button type="submit" class="btn btn-primary">Scrape</button>
-            </form>
-            </p>
+        </div>
+
+        <div class="container m-4">
+            <ul class="list-group">
+                <li class="list-group-item active info info-header"> Email Addresses Recovered</li>
+                <% emails.forEach(function(element) { %>
+                    <li class="list-group-item"><%= element %></li>
+                <% }); %>
+            </ul>
+        </div>
+
+        <div class="container m-4">
+            <ul class="list-group">
+                <li class="list-group-item active info info-header"> Phone Numbers Recovered</li>
+                <% phones.forEach(function(element) { %>
+                    <li class="list-group-item"><%= element %></li>
+                <% }); %>
+            </ul>
+        </div>
+
+        <div class="container m-4">
+            <ul class="list-group">
+                <li class="list-group-item active info info-header"> Addresses Recovered</li>
+                <% postcodes.forEach(function(element) { %>
+                    <li class="list-group-item">
+                        <%= element %>
+                        <a href="https://www.google.co.uk/maps/place/<%= element %>">View on map</a>
+                    </li>
+                <% }); %>
+            </ul>
+        </div>
+
+        <div class="container m-4">
+            <ul class="list-group">
+                <li class="list-group-item active info info-header"> Social Recovered</li>
+                <% facebook.forEach(function(element) { %>
+                    <li class="list-group-item">
+                        <i class="fa fa-facebook-official mr-1"></i>
+                        <a href="<%= element %>"><%= element %></a>
+                    </li>
+                <% }); %>
+                <% twitter.forEach(function(element) { %>
+                    <li class="list-group-item">
+                        <i class="fa fa-twitter"></i>
+                        <a href="<%= element %>"><%= element %></a>
+                    </li>
+                <% }); %>
+                <% linkedIn.forEach(function(element) { %>
+                    <li class="list-group-item">
+                        <i class="fa fa-linkedin"></i>
+                        <a href="<%= element %>"><%= element %></a>
+                    </li>
+                <% }); %>
+            </ul>
         </div>
     </div>
+    
 
-    <div class="container m-4">
-        <ul class="list-group">
-            <li class="list-group-item active"> Email Addresses Recovered</li>
-            <% emails.forEach(function(element) { %>
-                <li class="list-group-item"><%= element %></li>
-            <% }); %>
-        </ul>
-    </div>
-
-    <div class="container m-4">
-        <ul class="list-group">
-            <li class="list-group-item active"> Phone Numbers Recovered</li>
-            <% phones.forEach(function(element) { %>
-                <li class="list-group-item"><%= element %></li>
-            <% }); %>
-        </ul>
-    </div>
-
-    <div class="container m-4">
-        <ul class="list-group">
-            <li class="list-group-item active"> Addresses Recovered</li>
-            <% phones.forEach(function(element) { %>
-                <li class="list-group-item"><%= element %></li>
-            <% }); %>
-        </ul>
-    </div>
-
-    <div class="container m-4">
-        <ul class="list-group">
-            <li class="list-group-item active"> Social Recovered</li>
-            <% social.forEach(function(element) { %>
-                <li class="list-group-item"><%= element %></li>
-            <% }); %>
-        </ul>
-    </div>
-
-	</body>
+    </body>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
