--- a/views/result.ejs
+++ b/views/result.ejs
@@ -17,7 +17,7 @@
                 <p class="lead">
                 <form action="/scrape" method="GET">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="link" name="link" placeholder="Website URL" value="http://alban-financial.co.uk/">
+                    <input type="text" class="form-control" id="link" name="link" placeholder="Website URL" value="https://www.canddi.com/" required>
                 </div>
                 <div class="form-group pull-right">
                     <button type="submit" class="btn btn-info" id="btn-scrape">Scrape</button>
