add postcode search

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="container m-4">
             <div class="jumbotron">
-                <h1 class="display-4 text-shadow">Universal Email Scraper</h1>
+                <h1 class="display-4 text-shadow">Universal Scraper</h1>
                 <p class="lead text-shadow">Perform a simple web scrape to extract contact information from company websites</p>
                 <hr class="my-4">
 
