--- a/views/result.ejs
+++ b/views/result.ejs
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="container m-4">
             <div class="jumbotron">
-                <h1 class="display-4 text-shadow">Universal Email Scraper</h1>
+                <h1 class="display-4 text-shadow">Universal Scraper</h1>
                 <p class="lead text-shadow">Perform a simple web scrape to extract contact information from company websites</p>
                 <hr class="my-4">
 
@@ -50,7 +50,7 @@
                 <% postcodes.forEach(function(element) { %>
                     <li class="list-group-item">
                         <%= element %>
-                        <a href="https://www.google.co.uk/maps/place/<%= element %>">View on map</a>
+                        <a href="https://www.google.co.uk/maps/place/<%= element %>" target="_blank">View on map</a>
                     </li>
                 <% }); %>
             </ul>
