--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,8 @@
                 <p class="lead">
                 <form action="/scrape" method="GET">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="link" name="link" placeholder="Website URL" value="https://www.canddi.com/" required>
+                    <input type="text" class="form-control" id="link" name="link"
+                    placeholder="Website URL"  required>
                 </div>
                 <div class="form-group pull-right">
                     <button type="submit" class="btn btn-info" id="btn-scrape">Scrape</button>
